[package]
name = "rustjay-mosh"
version = "0.1.0"
edition = "2024"
description = "Rust-based NLE focused on datamoshing via I-frame removal and motion-vector manipulation"
license = "MIT"

# Numeric-heavy codec code is unusably slow without any optimisation in debug.
# opt-level 1 keeps incremental compile fast while speeding up the encoder ~10×.
[profile.dev]
opt-level = 1

[dependencies]
thiserror = "2"
ffmpeg-next = "8"
eframe = { version = "0.29", features = ["wgpu"] }
wgpu = "22"
rfd = "0.15"
rayon = "1"
tempfile = "3"

